<resources>
    <string name="app_name">MindGarden</string>
    <string name="background_image_desc">background image</string>
    <string name="welcome_title">Selamat datang di \n MindGarden!</string>
    <string name="welcome_desc">Tempat di mana setiap perasaanmu \n didengar, setiap tulisanmu berarti, dan \n setiap hari adalah kesempatan untuk \n bertumbuh.</string>
    <string name="cont">Continue</string>
    <string name="welcome_banner_desc">welcome banner</string>
    <string name="fail_title">Hmm, Sepertinya \n Belum Berhasil Masuk</string>
    <string name="fail_desc">Kami tidak bisa mengakses akunmu \n saat ini. Pastikan kredensialmu benar, \n atau login dengan Google jika lebih \n mudah.</string>
    <string name="fail_banner_desc">fail banner</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="ic_home_desc">Home Icon</string>
    <string name="ic_history_desc">history icon</string>
    <string name="ic_diary_desc">diary icon</string>
    <string name="ic_settings_desc">settings icon</string>
    <string name="ic_profile_desc">profile icon</string>
    <string name="menu_indicator_desc">menu indicator</string>
    <string name="summary_desc">Ringkasan suasana hatimu minggu ini</string>
    <string name="summary_title">Mood Summary</string>
    <string name="streak_title">Diary Streak!</string>
    <string name="sun">Sun</string>
    <string name="date_placeholder">0</string>
    <string name="sunday_check_desc">sunday check</string>
    <string name="mon">Mon</string>
    <string name="monday_check_desc">monday check</string>
    <string name="tue">Tue</string>
    <string name="tuesday_check">tuesday check</string>
    <string name="wed">Wed</string>
    <string name="wednesday_check_desc">wednesday check</string>
    <string name="thu">Thu</string>
    <string name="thursday_check_desc">thursday check</string>
    <string name="fri">Fri</string>
    <string name="friday_check_desc">friday check</string>
    <string name="sat">Sat</string>
    <string name="saturday_check_desc">saturday check</string>
    <string name="hallo_placeholder">Hallo, User!</string>
    <string name="header_greeting">Selamat datang kembali di MindGarden!</string>
    <string name="soul_garden_placeholder">soul garden</string>
    <string name="streak_icon_desc">streak icon</string>
    <string name="streak_placeholder">0</string>
    <string name="emo_icon_placeholder">emo placeholder</string>
    <string name="emo_stat_placeholder">0%</string>
    <string name="anger_message">Kamu Sedang Murka Hari Ini!</string>
    <string name="fear_message">Kamu Sedang Ketakutan Hari Ini!</string>
    <string name="sadness_message">Kamu Sedang Sedih Hari Ini!</string>
    <string name="joy_message">Kamu Sedang Bahagia Hari Ini!</string>
    <string name="surprise_message">Kamu Sedang Terkejut Hari Ini!</string>
    <string name="love_message">Kamu Sedang Dicintai Hari Ini!</string>
</resources>