<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_feature.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_menu"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/ic_home_desc"
                android:padding="0dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/primary_400"
                android:textSize="@dimen/body"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/home_menu_indicator"
                android:layout_width="36dp"
                android:layout_height="4dp"
                android:background="@drawable/shape_rounded"
                android:backgroundTint="@color/primary_400"
                android:contentDescription="@string/menu_indicator_desc"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/ic_history_desc"
                android:padding="0dp"
                android:src="@drawable/ic_history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/primary_400"
                android:textSize="@dimen/body"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/history_menu_indicator"
                android:layout_width="36dp"
                android:layout_height="4dp"
                android:background="@drawable/shape_rounded"
                android:backgroundTint="@color/primary_400"
                android:contentDescription="@string/menu_indicator_desc"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/ic_diary_desc"
                android:src="@drawable/ic_diary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/ic_settings_desc"
                android:padding="0dp"
                android:src="@drawable/ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/primary_400"
                android:textSize="@dimen/body"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/settings_menu_indicator"
                android:layout_width="36dp"
                android:layout_height="4dp"
                android:background="@drawable/shape_rounded"
                android:backgroundTint="@color/primary_400"
                android:contentDescription="@string/menu_indicator_desc"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/ic_profile_desc"
                android:padding="0dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/primary_400"
                android:textSize="@dimen/body"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/profile_menu_indicator"
                android:layout_width="36dp"
                android:layout_height="4dp"
                android:background="@drawable/shape_rounded"
                android:backgroundTint="@color/primary_400"
                android:contentDescription="@string/menu_indicator_desc"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>